@@ -132,7 +132,7 @@ public class DtracePartitioner implements Partitioner<String, String>, Iterator<
         // as the key in the nonceMap, which maps
         // nonces --> ENTER half of invocation
         int theNonce = calcNonce(enterStr);
-        nonceMap.put(new Integer(theNonce), enterStr);
+        nonceMap.put(Integer.valueOf(theNonce), enterStr);
       }
 
       // look for EXIT half of invocations and augment
@@ -143,7 +143,7 @@ public class DtracePartitioner implements Partitioner<String, String>, Iterator<
         String nextInvo = grabNextInvocation();
         if (nextInvo.indexOf("EXIT") == -1) continue;
         int invoNonce = calcNonce(nextInvo);
-        Integer key = new Integer(invoNonce);
+        Integer key = invoNonce;
         String enterInvo = nonceMap.get(key);
         if (enterInvo != null) {
           nonceMap.put(key, enterInvo + lineSep + nextInvo);
